--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "countries-and-timezones": "^3.2.2",
     "country-language": "^0.1.7",
+    "crypto-js": "^4.1.1",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
